--- a/src/root/gui/GuiMain.kv
+++ b/src/root/gui/GuiMain.kv
@@ -2,10 +2,10 @@
 
 
 
-<Clabel>@Label:
+<Clabel@Label>:
     canvass:
-        rgb:
-
+        rgb: 0.1,0.1,0.1
+    
 BoxLayout:
     Label:
         text: "SeAn"
