--- a/src/root/gui/GuiMain.kv
+++ b/src/root/gui/GuiMain.kv
@@ -1,15 +1,9 @@
+#:kivy 1.10.0
 
-
-
-
-<Clabel@Label>:
-    canvass:
-        rgb: 0.1,0.1,0.1
+<GuiMain>:
+    wheel: wheel
+    canvas:
+        Wheel:
+            id: wheel
     
-BoxLayout:
-    Label:
-        text: "SeAn"
-        size_hint_x:0.7
-    Clabel: 
-        text: "Andreeee"
-        size_hint_x:0.3
+    
